# bookinfo

./: README.md
details-service/: Cargo.toml  build.rs
details-service/proto/: details.proto
details-service/src/: main.rs
details-service/src/application/: details_service.rs  mod.rs
details-service/src/domain/: detail.rs  mod.rs  repository.rs
details-service/src/infrastructure/: grpc_server.rs  mod.rs  repository_impl.rs
reviews-service/: Cargo.toml  build.rs
reviews-service/proto/: reviews.proto
reviews-service/src/: main.rs  reviews.rs
reviews-service/src/application/: mod.rs  reviews_service.rs
reviews-service/src/domain/: mod.rs  repository.rs  review.rs
reviews-service/src/infrastructure/: grpc_server.rs  repository_impl.rs
