[package]
name = "reviews-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["transport"] }
tonic-reflection = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
